test/invalid/baseline/promise-empty.txt
Syntax error at line 1 in promise-empty.webidl:
typedef Promise<> empty;
                ^ Missing Promise subtype
